--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -32,6 +32,7 @@
 .projects{
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
     gap: 30px;
     height: 800px;
     overflow-y: auto;
